--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,31 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="${packageName}.${activityClass}">
+				xmlns:tools="http://schemas.android.com/tools"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				tools:context="${packageName}.${activityClass}">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+	<LinearLayout
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		android:orientation="vertical">
+
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/app_name"/>
+
+		<Button
+			android:id="@+id/button_start_game"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/startGame"/>
+
+		<Button
+			android:id="@+id/button_exit"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/exit"/>
+	</LinearLayout>
+
 
 </RelativeLayout>
