--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,10 +3,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
 		android:id="@+id/menu_item_start_game"
-		android:title="@string/startGame"
-		/>
-
-	<item
-		android:id="@+id/menu_item_exit"
-		android:title="@string/exit"/>
+		android:title="@string/startGame"/>
 </menu>
