--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-				xmlns:tools="http://schemas.android.com/tools"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:orientation="vertical"
-				android:layout_marginLeft="5dip"
-				tools:context="${packageName}.${activityClass}">
+			  xmlns:tools="http://schemas.android.com/tools"
+			  android:layout_width="match_parent"
+			  android:layout_height="match_parent"
+			  android:layout_marginLeft="5dip"
+			  android:orientation="vertical"
+			  tools:context="${packageName}.${activityClass}">
 
 	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:padding="10dip"
+		android:text="@string/app_name"
 		android:textSize="20dip"
-		android:textStyle="bold"
-		android:text="@string/app_name"/>
+		android:textStyle="bold"/>
 
 	<Button
 		android:id="@+id/button_start_game"
