Refactored Highscores and Main Menu to use AndroidAnnotations and tests to use Robolectric

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
 			  android:layout_width="match_parent"
 			  android:layout_height="match_parent"
 			  android:layout_marginLeft="5dip"
+			  android:layout_marginStart="5dip"
 			  android:orientation="vertical"
 			  tools:context="${packageName}.${activityClass}">
 
@@ -11,7 +12,7 @@
 		android:layout_height="wrap_content"
 		android:padding="10dip"
 		android:text="@string/app_name"
-		android:textSize="20dip"
+		android:textSize="20sp"
 		android:textStyle="bold"/>
 
 	<Button
