--- a/app/src/main/res/layout/activity_submit_highscore.xml
+++ b/app/src/main/res/layout/activity_submit_highscore.xml
@@ -12,7 +12,7 @@
 			android:layout_height="wrap_content" />
 	
 		<EditText
-			android:id="@+id/username"
+			android:id="@+id/username_text_input"
 			android:inputType="text"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
