Eigener Highscore ist hervorgehoben nach Submit Highscore

--- a/app/src/main/res/layout/table_row_highscore.xml
+++ b/app/src/main/res/layout/table_row_highscore.xml
@@ -8,6 +8,10 @@
 
 	<TextView
 		android:padding="5dip"
+		android:text="@string/position"/>
+
+	<TextView
+		android:padding="5dip"
 		android:text="@string/player"/>
 
 	<TextView
